add events and blogs block with placeholder styling and update start script in package.json

--- a/wp-content/themes/ourblocktheme/css/modules/shame.scss
+++ b/wp-content/themes/ourblocktheme/css/modules/shame.scss
@@ -1,6 +1,14 @@
 @use "../base/variables" as var;
 @use "../base/baseline" as base;
 
+.our-placeholder-block {
+  padding: 1.25rem;
+  font-size: 1.65rem;
+  text-align: center;
+  border: 1px solid #e5e5e5;
+  background: linear-gradient(180deg, #dedede, #adadad);
+}
+
 .remove-favorite {
   display: inline-block;
   transition: all 0.3s;
