--- a/wp-content/themes/ourblocktheme/templates/index.html
+++ b/wp-content/themes/ourblocktheme/templates/index.html
@@ -1,3 +1,63 @@
-<!-- wp:heading {"textAlign":"center","level":3} -->
-<h3 class="wp-block-heading has-text-align-center" id="welcome-to-our-site">Welcome to our site.</h3>
-<!-- /wp:heading -->
+<!-- wp:ourblocktheme/header /-->
+
+<!-- wp:ourblocktheme/banner {"imgID":56,"imgURL":"http://ouw-theme-learning.local/wp-content/uploads/2025/02/beautiful-lednice-castle-park-in-fall-picjumbo-com-1500x350.jpg","className":"wp-block-ourblocktheme-banner alignfull page-banner"} -->
+<!-- wp:ourblocktheme/genericheading {"text":"header here"} -->
+<h1 class="wp-block-ourblocktheme-genericheading headline headline--large">header here</h1>
+<!-- /wp:ourblocktheme/genericheading -->
+
+<!-- wp:ourblocktheme/genericheading {"text":"the sky is blue","size":"medium"} -->
+<h2 class="wp-block-ourblocktheme-genericheading headline headline--medium">the sky is blue</h2>
+<!-- /wp:ourblocktheme/genericheading -->
+
+<!-- wp:ourblocktheme/genericbutton {"text":"Button with colors","size":"medium","colorName":"dark-orange"} -->
+<a href="" class="wp-block-ourblocktheme-genericbutton btn btn--medium btn--dark-orange">Button with colors</a>
+<!-- /wp:ourblocktheme/genericbutton -->
+<!-- /wp:ourblocktheme/banner -->
+
+<!-- wp:ourblocktheme/slideshow -->
+<!-- wp:ourblocktheme/slide {"imgID":56,"imgURL":"http://ouw-theme-learning.local/wp-content/uploads/2025/02/beautiful-lednice-castle-park-in-fall-picjumbo-com-1500x350.jpg"} -->
+<!-- wp:ourblocktheme/genericheading {"text":"Example1"} -->
+<h1 class="wp-block-ourblocktheme-genericheading headline headline--large">Example1</h1>
+<!-- /wp:ourblocktheme/genericheading -->
+
+<!-- wp:ourblocktheme/genericbutton {"text":"Learn More","colorName":"dark-orange"} -->
+<a href="" class="wp-block-ourblocktheme-genericbutton btn btn--large btn--dark-orange">Learn More</a>
+<!-- /wp:ourblocktheme/genericbutton -->
+<!-- /wp:ourblocktheme/slide -->
+
+<!-- wp:ourblocktheme/slide {"imgID":56,"imgURL":"http://ouw-theme-learning.local/wp-content/uploads/2025/02/beautiful-lednice-castle-park-in-fall-picjumbo-com-1500x350.jpg"} -->
+<!-- wp:ourblocktheme/genericheading {"text":"Example2"} -->
+<h1 class="wp-block-ourblocktheme-genericheading headline headline--large">Example2</h1>
+<!-- /wp:ourblocktheme/genericheading -->
+
+<!-- wp:ourblocktheme/genericbutton {"text":"Learn More"} -->
+<a href="" class="wp-block-ourblocktheme-genericbutton btn btn--large btn--blue">Learn More</a>
+<!-- /wp:ourblocktheme/genericbutton -->
+<!-- /wp:ourblocktheme/slide -->
+<!-- /wp:ourblocktheme/slideshow -->
+
+<!-- wp:ourblocktheme/eventsandblogs /-->
+
+<!-- wp:ourblocktheme/slideshow -->
+<!-- wp:ourblocktheme/slide {"imgID":56,"imgURL":"http://ouw-theme-learning.local/wp-content/uploads/2025/02/beautiful-lednice-castle-park-in-fall-picjumbo-com-1500x350.jpg"} -->
+<!-- wp:ourblocktheme/genericheading {"text":"Example1"} -->
+<h1 class="wp-block-ourblocktheme-genericheading headline headline--large">Example1</h1>
+<!-- /wp:ourblocktheme/genericheading -->
+
+<!-- wp:ourblocktheme/genericbutton {"text":"Learn More","colorName":"dark-orange"} -->
+<a href="" class="wp-block-ourblocktheme-genericbutton btn btn--large btn--dark-orange">Learn More</a>
+<!-- /wp:ourblocktheme/genericbutton -->
+<!-- /wp:ourblocktheme/slide -->
+
+<!-- wp:ourblocktheme/slide {"imgID":56,"imgURL":"http://ouw-theme-learning.local/wp-content/uploads/2025/02/beautiful-lednice-castle-park-in-fall-picjumbo-com-1500x350.jpg"} -->
+<!-- wp:ourblocktheme/genericheading {"text":"Example2"} -->
+<h1 class="wp-block-ourblocktheme-genericheading headline headline--large">Example2</h1>
+<!-- /wp:ourblocktheme/genericheading -->
+
+<!-- wp:ourblocktheme/genericbutton {"text":"Learn More"} -->
+<a href="" class="wp-block-ourblocktheme-genericbutton btn btn--large btn--blue">Learn More</a>
+<!-- /wp:ourblocktheme/genericbutton -->
+<!-- /wp:ourblocktheme/slide -->
+<!-- /wp:ourblocktheme/slideshow -->
+
+<!-- wp:ourblocktheme/footer /-->
