--- a/wp-content/plugins/interactivity-quiz/src/style.scss
+++ b/wp-content/plugins/interactivity-quiz/src/style.scss
@@ -35,7 +35,8 @@
 	padding: 10px;
 	border-radius: 4px;
 	background-color: rgba(255, 255, 255, 0.7);
-	width:100%;
+	width: 100%;
+	transition: all 0.5s;
 
 	@media screen and (min-width: 767px) {
 	  margin: 0 20px 0 0;
@@ -54,6 +55,7 @@
 
   .no-click {
 	cursor: auto;
+
 	&:hover {
 	  background-color: rgba(255, 255, 255, 0.7);
 	}
