--- a/wp-content/plugins/interactivity-quiz/src/style.scss
+++ b/wp-content/plugins/interactivity-quiz/src/style.scss
@@ -15,6 +15,10 @@
   border-radius: 4px;
   margin-bottom: 35px;
 
+  .hidden {
+	display: none;
+  }
+
   p {
 	font-size: 1.55rem;
 	margin: 0 0 15px 0 !important;
